Lift Dockerfile to jdk25 too